<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardViewProjeto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryLightColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerImagem"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:background="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/jetbrains" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/containerImagem"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewProjeto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/projeto"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_nome_projeto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="kotlin"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewProjeto"
                    app:layout_constraintTop_toTopOf="@+id/textViewProjeto" />

                <TextView
                    android:id="@+id/textViewDescricao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/descricao"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewProjeto"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProjeto" />

                <TextView
                    android:id="@+id/tv_descricao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="The Kotlin Programming Language"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textViewDescricao"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescricao" />

                <TextView
                    android:id="@+id/textViewDhCriacao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dhCriacao"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewDescricao"
                    app:layout_constraintTop_toBottomOf="@+id/tv_descricao" />

                <TextView
                    android:id="@+id/tv_dh_cricacao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="17/03/2020"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewDhCriacao"
                    app:layout_constraintTop_toTopOf="@+id/textViewDhCriacao" />

                <TextView
                    android:id="@+id/textViewDono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/dono"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewDhCriacao"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDhCriacao" />

                <TextView
                    android:id="@+id/tv_dono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="JetBrains "
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewDono"
                    app:layout_constraintTop_toTopOf="@+id/textViewDono" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>